make start and stop buttons smaller on mobile

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -79,13 +79,13 @@ $charcoal: #3b3a36;
     .start, .stop {
       background: black;
     }
-    .start{
-      height: 4em;
-      width: 4em;
-    }
-    .stop {
+    .start {
       height: 3em;
       width: 3em;
+    }
+    .stop {
+      height: 2.5em;
+      width: 2.5em;
     }
   }
 }
